fix alignment on about + make testimonial author more clear

--- a/static/css/about.less
+++ b/static/css/about.less
@@ -25,11 +25,11 @@
 }
 
 .top p{
-  width: 70%;
+  width: 90%;
 }
 
 .bottom p{
-  width: 70%;
+  width: 90%;
 }
 
 .growing-foundation {
@@ -41,11 +41,13 @@
 }
 
 div.col-md-6.double-par > p {
-  float: right;
-  padding-right: 25px
+  float: left;
+  padding-left: 15%;
+  text-align: justify;
 }
 
 div.col-md-6.double-par-2 > p {
   float: left;
-  padding-left: 50px;
+  padding-left: 7.5%;
+  text-align: justify;
 }
