--- a/static/css/people.less
+++ b/static/css/people.less
@@ -61,7 +61,6 @@
 .bio-heads {
   padding-bottom: 25px;
   margin-top: 35px;
-  margin-bottom: 35px;
   margin-left: 40px;
 }
 
@@ -70,7 +69,7 @@
   margin: 0 auto;
 }
 
-.bio-heads p {
+.bio-heads p, span {
   display: block;
   margin: 0 auto;
   width: 50%;
